# weather_screen

./: README.md
rgb_src/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigs
rgb_src/main/: CMakeLists.txt  Weather_icon_28px.c  Weather_icon_60px.c  Xiaolai_font_20.c  Xiaolai_font_28.c  Xiaolai_font_36.c  Xiaolai_font_48.c  Xiaolai_font_70.c  idf_component.yml  lvgl_demo_ui.c  main.c  rgb_lcd_example_main.c  ui.c  ui.h  ui_events.c  ui_events.h  ui_img_bg1_png.c
