idf_component_register(SRCS "Background_img.c" "s220_12fps.c" "ui_events.c" "rgb_lcd_example_main.c" "lvgl_demo_ui.c" "ui.c" "ui.h" "ui_events.h" "ui_helpers.c" "ui_helpers.h" "ui_img_bg1_png.c" "Weather_icon_28px.c" "Weather_icon_60px.c" "Xiaolai_font_20.c" "Xiaolai_font_28.c" "Xiaolai_font_36.c" "Xiaolai_font_48.c" "Xiaolai_font_70.c"
                       INCLUDE_DIRS ".")
